further minor styling tweaks

--- a/less/home.less
+++ b/less/home.less
@@ -59,6 +59,10 @@
                     .txt(1.6rem, bolder, auto, center);
                 }
 
+                p{
+                    .txt(1.2rem, normal, auto, center);
+                }
+
             }
 
         }
