--- a/css/index.css
+++ b/css/index.css
@@ -273,6 +273,12 @@ hr {
   color: auto;
   text-align: center;
 }
+.main-container .the-team .team-member .intro p {
+  font-size: 1.2rem;
+  font-weight: normal;
+  color: auto;
+  text-align: center;
+}
 .main-container .the-team .team-member:last-child {
   margin: auto;
 }
